--- a/DatingApp-SPA/src/app/app.component.html
+++ b/DatingApp-SPA/src/app/app.component.html
@@ -1,5 +1,6 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <app-nav></app-nav>
 <h1>Dating App : {{ title }}!</h1>
-<app-value></app-value>
+<app-home></app-home>
+
 
